--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "PHP client library for the SDB API.",
     "type": "library",
     "license": "MIT",
+    "version": "1.1",
     "autoload": {
         "psr-4": {
             "Silassiai\\PhpSbdApiClient\\": "src/"
